--- a/css/style.css
+++ b/css/style.css
@@ -15,11 +15,11 @@
 * ======================================================= */
 body {
   font-family: 'Poppins', sans-serif;
-  font-weight: 300;
-  font-size: 16px;
+  font-weight: 400;
+  font-size: 19px;
   line-height: 1.7;
-  color: #fff;
-  background: #10141F;
+  color: #252525;
+  background: #F0F2F5;
 }
 
 .header-height {
@@ -58,13 +58,13 @@ body {
 }
 
 a {
-  color: #DD356E;
+  color: #3578EA;
   -webkit-transition: 0.5s;
   -o-transition: 0.5s;
   transition: 0.5s;
 }
 a:hover, a:active, a:focus {
-  color: #DD356E;
+  color: #3578EA;
   outline: none;
   text-decoration: none;
 }
@@ -74,7 +74,7 @@ p {
 }
 
 h1, h2, h3, h4, h5, h6, figure {
-  color: #fff;
+  color: #252525;
   font-family: 'Poppins', sans-serif;
   font-weight: 400;
   margin: 0 0 20px 0;
@@ -82,21 +82,21 @@ h1, h2, h3, h4, h5, h6, figure {
 
 ::-webkit-selection {
   color: #fff;
-  background: #DD356E;
+  background: #3578EA;
 }
 
 ::-moz-selection {
   color: #fff;
-  background: #DD356E;
+  background: #3578EA;
 }
 
 ::selection {
   color: #fff;
-  background: #DD356E;
+  background: #3578EA;
 }
 
 .fh5co-nav {
-  background: #1C1F29;
+  background: #E4E6EA;
 }
 .fh5co-nav .top-menu {
   padding: 28px 0;
@@ -110,11 +110,11 @@ h1, h2, h3, h4, h5, h6, figure {
   font-family: 'Poppins', sans-serif;
 }
 .fh5co-nav #fh5co-logo a span {
-  color: #DD356E;
+  color: #3578EA;
 }
 .fh5co-nav a {
   padding: 0px;
-  color: #fff;
+  color: #252525;
 }
 @media screen and (max-width: 768px) {
   .fh5co-nav .menu-1 {
@@ -134,13 +134,13 @@ h1, h2, h3, h4, h5, h6, figure {
 .fh5co-nav ul li a {
   font-size: 16px;
   padding: 30px 15px;
-  color: #fff;
+  color: #252525;
   -webkit-transition: 0.5s;
   -o-transition: 0.5s;
   transition: 0.5s;
 }
 .fh5co-nav ul li a:hover, .fh5co-nav ul li a:focus, .fh5co-nav ul li a:active {
-  color: #9699A3;
+  color: #000;
 }
 .fh5co-nav ul li.has-dropdown {
   position: relative;
@@ -207,7 +207,7 @@ h1, h2, h3, h4, h5, h6, figure {
   color: #fff;
 }
 .fh5co-nav ul li.btn-cta a span {
-  background: #dd356e;
+  background: #3578EA;
   padding: 4px 24px;
   display: -moz-inline-stack;
   display: inline-block;
@@ -227,7 +227,7 @@ h1, h2, h3, h4, h5, h6, figure {
   box-shadow: 0px 14px 20px -9px rgba(0, 0, 0, 0.75);
 }
 .fh5co-nav ul li.active > a {
-  color: #fff !important;
+  color: #000 !important;
   position: relative;
 }
 .fh5co-nav ul li.active > a:after {
@@ -238,7 +238,7 @@ h1, h2, h3, h4, h5, h6, figure {
   content: '';
   width: 30px;
   height: 2px;
-  background: #DD356E;
+  background: #3578EA;
   margin: 0 auto;
 }
 
@@ -380,7 +380,7 @@ h1, h2, h3, h4, h5, h6, figure {
 }
 #fh5co-header .display-tc .btn.btn-demo,
 .fh5co-cover .display-tc .btn.btn-demo {
-  background: #dd356e;
+  background: #3578EA;
   border: none;
 }
 #fh5co-header .display-tc .btn.btn-demo:hover, #fh5co-header .display-tc .btn.btn-demo:focus,
@@ -391,7 +391,7 @@ h1, h2, h3, h4, h5, h6, figure {
 }
 #fh5co-header .display-tc .btn:hover,
 .fh5co-cover .display-tc .btn:hover {
-  background: #DD356E !important;
+  background: #3578EA !important;
   -webkit-box-shadow: 0px 14px 30px -15px rgba(0, 0, 0, 0.75) !important;
   -moz-box-shadow: 0px 14px 30px -15px rgba(0, 0, 0, 0.75) !important;
   box-shadow: 0px 14px 30px -15px rgba(0, 0, 0, 0.75) !important;
@@ -409,7 +409,7 @@ h1, h2, h3, h4, h5, h6, figure {
 }
 
 #fh5co-features {
-  background: #dd356e;
+  background: #3578EA;
 }
 #fh5co-features .services-padding {
   padding: 7em 0;
@@ -443,7 +443,7 @@ h1, h2, h3, h4, h5, h6, figure {
   display: table-cell;
   vertical-align: middle;
   height: 60px;
-  color: #DD356E !important;
+  color: #3578EA !important;
 }
 #fh5co-features .feature-left .feature-copy {
   float: right;
@@ -678,7 +678,7 @@ h1, h2, h3, h4, h5, h6, figure {
   display: inline-block;
   zoom: 1;
   *display: inline;
-  color: #DD356E;
+  color: #3578EA;
   padding-left: 10px;
   padding-right: 10px;
 }
@@ -726,7 +726,7 @@ h1, h2, h3, h4, h5, h6, figure {
   top: 0;
   left: 0;
   right: 0;
-  background: #dd356e;
+  background: #3578EA;
 }
 #fh5co-started .fh5co-heading {
   margin-bottom: 0;
@@ -742,7 +742,7 @@ h1, h2, h3, h4, h5, h6, figure {
   height: 54px;
   border: none !important;
   background: #fff;
-  color: #DD356E;
+  color: #3578EA;
   font-size: 16px;
   text-transform: uppercase;
   font-weight: 400;
@@ -966,7 +966,7 @@ transform: scale(1.01);
 .fh5co-team > div h3 {
   margin-bottom: 0;
   font-size: 20px;
-  color: #DD356E;
+  color: #3578EA;
 }
 .fh5co-team > div .position {
   color: #d9d9d9;
@@ -1334,9 +1334,9 @@ input[type="text"] {
 }
 
 .btn-primary {
-  background: #DD356E;
+  background: #3578EA;
   color: #fff;
-  border: 2px solid #DD356E;
+  border: 2px solid #3578EA;
 }
 .btn-primary:hover, .btn-primary:focus, .btn-primary:active {
   background: #e14b7e !important;
@@ -1344,11 +1344,11 @@ input[type="text"] {
 }
 .btn-primary.btn-outline {
   background: transparent;
-  color: #DD356E;
-  border: 2px solid #DD356E;
+  color: #3578EA;
+  border: 2px solid #3578EA;
 }
 .btn-primary.btn-outline:hover, .btn-primary.btn-outline:focus, .btn-primary.btn-outline:active {
-  background: #DD356E;
+  background: #3578EA;
   color: #fff;
 }
 
@@ -1478,7 +1478,7 @@ input[type="text"] {
 .form-control:active, .form-control:focus {
   outline: none;
   box-shadow: none;
-  border-color: #DD356E;
+  border-color: #3578EA;
 }
 
 .row-pb-md {
