--- a/css/style.css
+++ b/css/style.css
@@ -14,20 +14,36 @@
 *
 * ======================================================= */
 body {
-  font-family: 'Poppins', sans-serif;
-  font-weight: 400;
-  font-size: 19px;
-  line-height: 1.7;
-  color: #252525;
-  background: #F0F2F5;
+  font-family: 'Source Sans Pro', sans-serif;
+  font-weight: 500;
+  font-size: 20px;
+  line-height: 1.5;
+  color: #fff;
+  background: #1C1F29;
+}
+
+html { 
+  background: url(images/Bright.jpg) no-repeat center center fixed; 
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+}
+
+.clip-circle {
+  clip-path: circle(60px at center);
+}
+
+.subtitle {
+  color: hsla(0,0%,100%,0.5);
 }
 
 .header-height {
-  min-height: 40vh;
+  min-height: 0vh;
 }
 
 #header-content {
-  margin-top: 250px;
+  margin-top: 0px;
 }
 
 #page {
@@ -58,13 +74,13 @@ body {
 }
 
 a {
-  color: #3578EA;
+  color: #fff;
   -webkit-transition: 0.5s;
   -o-transition: 0.5s;
   transition: 0.5s;
 }
 a:hover, a:active, a:focus {
-  color: #3578EA;
+  color: #DD356E;
   outline: none;
   text-decoration: none;
 }
@@ -74,32 +90,32 @@ p {
 }
 
 h1, h2, h3, h4, h5, h6, figure {
-  color: #252525;
-  font-family: 'Poppins', sans-serif;
+  color: #fff;
+  font-family: 'Source Sans Pro', sans-serif;
   font-weight: 400;
   margin: 0 0 20px 0;
 }
 
 ::-webkit-selection {
   color: #fff;
-  background: #3578EA;
+  background: #DD356E;
 }
 
 ::-moz-selection {
   color: #fff;
-  background: #3578EA;
+  background: #DD356E;
 }
 
 ::selection {
   color: #fff;
-  background: #3578EA;
+  background: #DD356E;
 }
 
 .fh5co-nav {
-  background: #E4E6EA;
+  background: #1C1F29;
 }
 .fh5co-nav .top-menu {
-  padding: 28px 0;
+  padding: 80px 0 2px 0;
 }
 .fh5co-nav #fh5co-logo {
   font-size: 24px;
@@ -110,11 +126,11 @@ h1, h2, h3, h4, h5, h6, figure {
   font-family: 'Poppins', sans-serif;
 }
 .fh5co-nav #fh5co-logo a span {
-  color: #3578EA;
+  color: #DD356E;
 }
 .fh5co-nav a {
   padding: 0px;
-  color: #252525;
+  color: #fff;
 }
 @media screen and (max-width: 768px) {
   .fh5co-nav .menu-1 {
@@ -134,13 +150,13 @@ h1, h2, h3, h4, h5, h6, figure {
 .fh5co-nav ul li a {
   font-size: 16px;
   padding: 30px 15px;
-  color: #252525;
+  color: #fff;
   -webkit-transition: 0.5s;
   -o-transition: 0.5s;
   transition: 0.5s;
 }
 .fh5co-nav ul li a:hover, .fh5co-nav ul li a:focus, .fh5co-nav ul li a:active {
-  color: #000;
+  color: #9699A3;
 }
 .fh5co-nav ul li.has-dropdown {
   position: relative;
@@ -207,7 +223,7 @@ h1, h2, h3, h4, h5, h6, figure {
   color: #fff;
 }
 .fh5co-nav ul li.btn-cta a span {
-  background: #3578EA;
+  background: #dd356e;
   padding: 4px 24px;
   display: -moz-inline-stack;
   display: inline-block;
@@ -227,7 +243,7 @@ h1, h2, h3, h4, h5, h6, figure {
   box-shadow: 0px 14px 20px -9px rgba(0, 0, 0, 0.75);
 }
 .fh5co-nav ul li.active > a {
-  color: #000 !important;
+  color: #fff !important;
   position: relative;
 }
 .fh5co-nav ul li.active > a:after {
@@ -238,7 +254,7 @@ h1, h2, h3, h4, h5, h6, figure {
   content: '';
   width: 30px;
   height: 2px;
-  background: #3578EA;
+  background: #DD356E;
   margin: 0 auto;
 }
 
@@ -323,10 +339,10 @@ h1, h2, h3, h4, h5, h6, figure {
 }
 #fh5co-header .display-tc h1,
 .fh5co-cover .display-tc h1 {
-  margin-bottom: 12px;
-  font-size: 28px;
+  margin-bottom: 8px;
+  font-size: 24px;
   line-height: 1.3;
-  font-weight: 600;
+  font-weight: 500;
 }
 #fh5co-header .display-tc h0,
 .fh5co-cover .display-tc h0 {
@@ -380,7 +396,7 @@ h1, h2, h3, h4, h5, h6, figure {
 }
 #fh5co-header .display-tc .btn.btn-demo,
 .fh5co-cover .display-tc .btn.btn-demo {
-  background: #3578EA;
+  background: #dd356e;
   border: none;
 }
 #fh5co-header .display-tc .btn.btn-demo:hover, #fh5co-header .display-tc .btn.btn-demo:focus,
@@ -391,7 +407,7 @@ h1, h2, h3, h4, h5, h6, figure {
 }
 #fh5co-header .display-tc .btn:hover,
 .fh5co-cover .display-tc .btn:hover {
-  background: #3578EA !important;
+  background: #DD356E !important;
   -webkit-box-shadow: 0px 14px 30px -15px rgba(0, 0, 0, 0.75) !important;
   -moz-box-shadow: 0px 14px 30px -15px rgba(0, 0, 0, 0.75) !important;
   box-shadow: 0px 14px 30px -15px rgba(0, 0, 0, 0.75) !important;
@@ -409,7 +425,7 @@ h1, h2, h3, h4, h5, h6, figure {
 }
 
 #fh5co-features {
-  background: #3578EA;
+  background: #dd356e;
 }
 #fh5co-features .services-padding {
   padding: 7em 0;
@@ -443,7 +459,7 @@ h1, h2, h3, h4, h5, h6, figure {
   display: table-cell;
   vertical-align: middle;
   height: 60px;
-  color: #3578EA !important;
+  color: #DD356E !important;
 }
 #fh5co-features .feature-left .feature-copy {
   float: right;
@@ -678,7 +694,7 @@ h1, h2, h3, h4, h5, h6, figure {
   display: inline-block;
   zoom: 1;
   *display: inline;
-  color: #3578EA;
+  color: #DD356E;
   padding-left: 10px;
   padding-right: 10px;
 }
@@ -726,7 +742,7 @@ h1, h2, h3, h4, h5, h6, figure {
   top: 0;
   left: 0;
   right: 0;
-  background: #3578EA;
+  background: #dd356e;
 }
 #fh5co-started .fh5co-heading {
   margin-bottom: 0;
@@ -742,7 +758,7 @@ h1, h2, h3, h4, h5, h6, figure {
   height: 54px;
   border: none !important;
   background: #fff;
-  color: #3578EA;
+  color: #DD356E;
   font-size: 16px;
   text-transform: uppercase;
   font-weight: 400;
@@ -966,7 +982,7 @@ transform: scale(1.01);
 .fh5co-team > div h3 {
   margin-bottom: 0;
   font-size: 20px;
-  color: #3578EA;
+  color: #DD356E;
 }
 .fh5co-team > div .position {
   color: #d9d9d9;
@@ -1334,9 +1350,9 @@ input[type="text"] {
 }
 
 .btn-primary {
-  background: #3578EA;
+  background: #DD356E;
   color: #fff;
-  border: 2px solid #3578EA;
+  border: 2px solid #DD356E;
 }
 .btn-primary:hover, .btn-primary:focus, .btn-primary:active {
   background: #e14b7e !important;
@@ -1344,11 +1360,11 @@ input[type="text"] {
 }
 .btn-primary.btn-outline {
   background: transparent;
-  color: #3578EA;
-  border: 2px solid #3578EA;
+  color: #DD356E;
+  border: 2px solid #DD356E;
 }
 .btn-primary.btn-outline:hover, .btn-primary.btn-outline:focus, .btn-primary.btn-outline:active {
-  background: #3578EA;
+  background: #DD356E;
   color: #fff;
 }
 
@@ -1478,7 +1494,7 @@ input[type="text"] {
 .form-control:active, .form-control:focus {
   outline: none;
   box-shadow: none;
-  border-color: #3578EA;
+  border-color: #DD356E;
 }
 
 .row-pb-md {
@@ -1507,5 +1523,3 @@ input[type="text"] {
 .js .animate-box {
   opacity: 0;
 }
-
-/*# sourceMappingURL=style.css.map */
