--- a/css/style.css
+++ b/css/style.css
@@ -80,7 +80,7 @@ a {
   transition: 0.5s;
 }
 a:hover, a:active, a:focus {
-  color: #DD356E;
+  color: #FF501A;
   outline: none;
   text-decoration: none;
 }
@@ -98,17 +98,17 @@ h1, h2, h3, h4, h5, h6, figure {
 
 ::-webkit-selection {
   color: #fff;
-  background: #DD356E;
+  background: #FF501A;
 }
 
 ::-moz-selection {
   color: #fff;
-  background: #DD356E;
+  background: #FF501A;
 }
 
 ::selection {
   color: #fff;
-  background: #DD356E;
+  background: #FF501A;
 }
 
 .fh5co-nav {
@@ -126,7 +126,7 @@ h1, h2, h3, h4, h5, h6, figure {
   font-family: 'Poppins', sans-serif;
 }
 .fh5co-nav #fh5co-logo a span {
-  color: #DD356E;
+  color: #FF501A;
 }
 .fh5co-nav a {
   padding: 0px;
@@ -223,7 +223,7 @@ h1, h2, h3, h4, h5, h6, figure {
   color: #fff;
 }
 .fh5co-nav ul li.btn-cta a span {
-  background: #dd356e;
+  background: #FF501A;
   padding: 4px 24px;
   display: -moz-inline-stack;
   display: inline-block;
@@ -252,9 +252,9 @@ h1, h2, h3, h4, h5, h6, figure {
   left: 0;
   right: 0;
   content: '';
-  width: 30px;
+  width: 75%;
   height: 2px;
-  background: #DD356E;
+  background: #FF501A;
   margin: 0 auto;
 }
 
@@ -396,7 +396,7 @@ h1, h2, h3, h4, h5, h6, figure {
 }
 #fh5co-header .display-tc .btn.btn-demo,
 .fh5co-cover .display-tc .btn.btn-demo {
-  background: #dd356e;
+  background: #FF501A;
   border: none;
 }
 #fh5co-header .display-tc .btn.btn-demo:hover, #fh5co-header .display-tc .btn.btn-demo:focus,
@@ -407,7 +407,7 @@ h1, h2, h3, h4, h5, h6, figure {
 }
 #fh5co-header .display-tc .btn:hover,
 .fh5co-cover .display-tc .btn:hover {
-  background: #DD356E !important;
+  background: #FF501A !important;
   -webkit-box-shadow: 0px 14px 30px -15px rgba(0, 0, 0, 0.75) !important;
   -moz-box-shadow: 0px 14px 30px -15px rgba(0, 0, 0, 0.75) !important;
   box-shadow: 0px 14px 30px -15px rgba(0, 0, 0, 0.75) !important;
@@ -425,7 +425,7 @@ h1, h2, h3, h4, h5, h6, figure {
 }
 
 #fh5co-features {
-  background: #dd356e;
+  background: #FF501A;
 }
 #fh5co-features .services-padding {
   padding: 7em 0;
@@ -459,7 +459,7 @@ h1, h2, h3, h4, h5, h6, figure {
   display: table-cell;
   vertical-align: middle;
   height: 60px;
-  color: #DD356E !important;
+  color: #FF501A !important;
 }
 #fh5co-features .feature-left .feature-copy {
   float: right;
@@ -694,7 +694,7 @@ h1, h2, h3, h4, h5, h6, figure {
   display: inline-block;
   zoom: 1;
   *display: inline;
-  color: #DD356E;
+  color: #FF501A;
   padding-left: 10px;
   padding-right: 10px;
 }
@@ -742,7 +742,7 @@ h1, h2, h3, h4, h5, h6, figure {
   top: 0;
   left: 0;
   right: 0;
-  background: #dd356e;
+  background: #FF501A;
 }
 #fh5co-started .fh5co-heading {
   margin-bottom: 0;
@@ -758,7 +758,7 @@ h1, h2, h3, h4, h5, h6, figure {
   height: 54px;
   border: none !important;
   background: #fff;
-  color: #DD356E;
+  color: #FF501A;
   font-size: 16px;
   text-transform: uppercase;
   font-weight: 400;
@@ -900,7 +900,9 @@ h1, h2, h3, h4, h5, h6, figure {
 }
 
 .fh5co-portfolio .portfolio-entry:hover {
-transform: scale(1.01); 
+transform: scale(1.01);
+border: 1px solid rgba(255, 255, 255, 0.4);
+transition: all .2s ease-in-out; 
 }
 
 @media screen and (max-width: 768px) {
@@ -982,7 +984,7 @@ transform: scale(1.01);
 .fh5co-team > div h3 {
   margin-bottom: 0;
   font-size: 20px;
-  color: #DD356E;
+  color: #FF501A;
 }
 .fh5co-team > div .position {
   color: #d9d9d9;
@@ -1350,9 +1352,9 @@ input[type="text"] {
 }
 
 .btn-primary {
-  background: #DD356E;
+  background: #FF501A;
   color: #fff;
-  border: 2px solid #DD356E;
+  border: 2px solid #FF501A;
 }
 .btn-primary:hover, .btn-primary:focus, .btn-primary:active {
   background: #e14b7e !important;
@@ -1360,11 +1362,11 @@ input[type="text"] {
 }
 .btn-primary.btn-outline {
   background: transparent;
-  color: #DD356E;
-  border: 2px solid #DD356E;
+  color: #FF501A;
+  border: 2px solid #FF501A;
 }
 .btn-primary.btn-outline:hover, .btn-primary.btn-outline:focus, .btn-primary.btn-outline:active {
-  background: #DD356E;
+  background: #FF501A;
   color: #fff;
 }
 
@@ -1494,7 +1496,7 @@ input[type="text"] {
 .form-control:active, .form-control:focus {
   outline: none;
   box-shadow: none;
-  border-color: #DD356E;
+  border-color: #FF501A;
 }
 
 .row-pb-md {
